--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,4 +8,4 @@ RUN pip3 install --upgrade pip && pip3 install -r ./requirements.txt --no-cache-
 
 COPY ./ /app
 
-CMD ["gunicorn", "menu.wsgi:application", "--bind", "0:8000"]
+CMD ["python3", "manage.py", "runserver", "0:8000"]
