--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -1,10 +1,19 @@
 version: '3.8'
 
 services:
+
+  frontend:
+    image: y4r1k/menu-frontend:latest
+    ports:
+      - "3000:3000"
+    volumes:
+      - frontend_build:/app/result_build/
+    environment:
+      NODE_ENV: production
+    restart: always
+
   backend:
-    build:
-      context: ../backend
-      dockerfile: Dockerfile
+    image: y4r1k/menu-backend:latest
     restart: always
     ports:
       - "8000:8000"
@@ -12,7 +21,24 @@ services:
       - static_value:/app/backend_static/
       - media_value:/app/backend_media/
 
+  nginx:
+    image: nginx:1.21.3-alpine
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/frantsuz-menu.crt:/etc/nginx/frantsuz-menu.crt
+      - ./nginx/frantsuz-menu.key:/etc/nginx/frantsuz-menu.key
+      - frontend_build:/usr/share/nginx/html/
+      - static_value:/var/html/backend_static/
+      - media_value:/var/html/backend_media/
+    restart: always
+    depends_on:
+      - backend
+      - frontend
 
 volumes:
+  frontend_build:
   static_value:
   media_value:
